# swagger/BackScreen.yaml
@@ -14,7 +14,7 @@ basePath: /api
 paths:
   /orgaos:
     get:
-      operationId: orgaos.list_orgaos
+      operationId: model.orgaos.list_orgaos
       tags:
         - Órgãos
       summary: Listagem dos órgãos
@@ -39,9 +39,40 @@ paths:
                 TITULAR:
                   type: string
 
+  /orgaos/vistas:
+    get:
+      operationId: model.orgaos.list_vistas
+      parameters:
+        - name: cdorg
+          description: Código do órgão.
+          in: query
+          type: integer
+          required: true
+      tags:
+      - Órgãos
+      summary: Listagem dos vistas abertas no órgão
+      description: Lista as vistas abertas do órgão selecionado, agrupadas por tempo de abertura
+      responses:
+        200:
+          description: Operação de listagem das vistas feita com sucesso
+          schema:
+            type: array
+            items:
+              properties:
+                TOTAL:
+                  type: integer
+                HOJE:
+                  type: integer
+                ATE_30:
+                  type: integer
+                DE_30_A_40:
+                  type: integer
+                MAIS_40:
+                  type: integer
+
   /clima:
     get:
-      operationId: clima.read
+      operationId: model.clima.read
       tags:
         - Clima
       summary: BLANK
